--- a/index.html
+++ b/index.html
@@ -249,7 +249,9 @@
   </template>
 
   <!-- <script src="js/main.js"></script> -->
-  <script src="js/data.js"></script>
+  <!-- <script src="js/data.js"></script> -->
+  <script src="js/server_data.js"></script>
+  <script src="js/handle_messages.js"></script>
   <script src="js/form.js"></script>
   <script src="js/map.js"></script>
   <script src="js/pin.js"></script>
