--- a/index.html
+++ b/index.html
@@ -250,11 +250,23 @@
 
   <!-- <script src="js/main.js"></script> -->
   <!-- <script src="js/data.js"></script> -->
-  <script src="js/server_data.js"></script>
+
+  <!-- <script src="js/server_data.js"></script>
   <script src="js/handle_messages.js"></script>
   <script src="js/form.js"></script>
   <script src="js/map.js"></script>
   <script src="js/pin.js"></script>
-  <script src="js/app.js"></script>
+  <script src="js/app.js"></script> -->
+
+  <script src="js_new/ajax.js"></script>
+  <script src="js_new/data.js"></script>
+  <script src="js_new/filters.js"></script>
+  <script src="js_new/handle_messages.js"></script>
+  <script src="js_new/form.js"></script>
+  <script src="js_new/map.js"></script>
+  <script src="js_new/adv.js"></script>
+  <script src="js_new/main_pin.js"></script>
+  <script src="js_new/entry.js"></script>
+
 </body>
 </html>
