--- a/index.html
+++ b/index.html
@@ -258,6 +258,7 @@
   <script src="js/pin.js"></script>
   <script src="js/app.js"></script> -->
 
+  <!-- <script src="js_new/utils.js"></script> -->
   <script src="js_new/ajax.js"></script>
   <script src="js_new/data.js"></script>
   <script src="js_new/filters.js"></script>
