--- a/index.html
+++ b/index.html
@@ -263,10 +263,12 @@
   <script src="js_new/data.js"></script>
   <script src="js_new/filters.js"></script>
   <script src="js_new/handle_messages.js"></script>
+  <script src="js_new/preview_loader.js"></script>
   <script src="js_new/form.js"></script>
   <script src="js_new/map.js"></script>
   <script src="js_new/adv.js"></script>
   <script src="js_new/main_pin.js"></script>
+  <script src="js_new/handle_messages.js"></script>
   <script src="js_new/entry.js"></script>
 
 </body>
