--- a/index.html
+++ b/index.html
@@ -248,28 +248,18 @@
     </div>
   </template>
 
-  <!-- <script src="js/main.js"></script> -->
-  <!-- <script src="js/data.js"></script> -->
-
-  <!-- <script src="js/server_data.js"></script>
+  <script src="js/utils.js"></script>
+  <script src="js/ajax.js"></script>
+  <script src="js/data.js"></script>
+  <script src="js/filters.js"></script>
   <script src="js/handle_messages.js"></script>
+  <script src="js/preview_loader.js"></script>
   <script src="js/form.js"></script>
   <script src="js/map.js"></script>
-  <script src="js/pin.js"></script>
-  <script src="js/app.js"></script> -->
-
-  <!-- <script src="js_new/utils.js"></script> -->
-  <script src="js_new/ajax.js"></script>
-  <script src="js_new/data.js"></script>
-  <script src="js_new/filters.js"></script>
-  <script src="js_new/handle_messages.js"></script>
-  <script src="js_new/preview_loader.js"></script>
-  <script src="js_new/form.js"></script>
-  <script src="js_new/map.js"></script>
-  <script src="js_new/adv.js"></script>
-  <script src="js_new/main_pin.js"></script>
-  <script src="js_new/handle_messages.js"></script>
-  <script src="js_new/entry.js"></script>
+  <script src="js/adv.js"></script>
+  <script src="js/main_pin.js"></script>
+  <script src="js/handle_messages.js"></script>
+  <script src="js/entry.js"></script>
 
 </body>
 </html>
