--- a/index.html
+++ b/index.html
@@ -253,13 +253,11 @@
   <script src="js/data.js"></script>
   <script src="js/filters.js"></script>
   <script src="js/handle_messages.js"></script>
-  <script src="js_4/preview_loader.js"></script>
-  <script src="js_4/form.js"></script>
+  <script src="js/form.js"></script>
   <script src="js/map.js"></script>
   <script src="js/adv.js"></script>
   <script src="js/main_pin.js"></script>
   <script src="js/handle_messages.js"></script>
   <script src="js/entry.js"></script>
-
 </body>
 </html>
